--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -26,7 +26,19 @@
 							<div th:if="${param.error}" id="login-alert" class="alert alert-danger col-sm-12">
 								<span>Invalid Email or Password</span>
 							</div>
-
+							<div th:if="${linkExpired}" id="login-alert" class="alert alert-danger col-sm-12">
+								<span th:text="#{link.expired}"></span>
+							</div>
+							
+							<div th:if="${accountActivated}" id="login-alert" class="alert alert-success col-sm-12">
+								<span th:text="#{account.activated.success}"></span>
+							</div>
+							<div th:if="${accountAlreadyActivated}" id="login-alert" class="alert alert-success col-sm-12">
+								<span th:text="#{account.already.activated}"></span>
+							</div>
+							<div th:if="${resendActivationLink}" id="login-alert" class="alert alert-info col-sm-12">
+								<span th:text="#{resend.activation.link}"></span>
+							</div>
 							<form th:action="@{/login}" th:method="POST" id="loginform" class="form-horizontal" role="form">
 								<div class="input-group login-input">
 									<span class="input-group-addon">
