--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -2,19 +2,16 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org"
 	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
-<title layout:title-pattern="$CONTENT_TITLE :: $LAYOUT_TITLE">Buddhi
-	Bal Thapa</title>
-
-<link rel="stylesheet"
-	th:href="@{https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css}"
-	integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
-	crossorigin="anonymous" />
-<link rel="stylesheet" th:href="@{/css/site.css}" />
-
-<link rel="stylesheet"
-	th:href="@{https://cdn.datatables.net/1.10.15/css/jquery.dataTables.min.css}" />
-<link rel="stylesheet" th:href="@{/css/sweetalert.css}" />
-<script src='https://www.google.com/recaptcha/api.js'></script>
+	<title layout:title-pattern="$CONTENT_TITLE :: $LAYOUT_TITLE">Buddhi Bal Thapa</title>
+	
+	<link rel="stylesheet" th:href="@{https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css}"
+		integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+		crossorigin="anonymous" />
+	<link rel="stylesheet" th:href="@{/css/site.css}" />
+	
+	<link rel="stylesheet" th:href="@{https://cdn.datatables.net/1.10.15/css/jquery.dataTables.min.css}" />
+	<link rel="stylesheet" th:href="@{/css/sweetalert.css}" />
+	<script src='https://www.google.com/recaptcha/api.js'></script>
 </head>
 <body>
 	<div class="content">
@@ -29,7 +26,7 @@
 								class="icon-bar"></span> <span class="icon-bar"></span> <span
 								class="icon-bar"></span>
 						</button>
-						<a class="navbar-brand" th:href="@{/}">Project name</a>
+						<a class="navbar-brand" th:href="@{/}">Home</a>
 					</div>
 					<div id="navbar" class="navbar-collapse collapse">
 						<ul class="nav navbar-nav">
@@ -147,6 +144,16 @@
 		th:src="@{https://cdn.datatables.net/1.10.15/js/jquery.dataTables.min.js}"></script>
 	<script th:src="@{/js/site.js}"></script>
 	<script th:src="@{/js/sweetalert.min.js}"></script>
+	<script>
+		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  		m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  		})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  		ga('create', 'UA-40696634-2', 'auto');
+ 		ga('send', 'pageview');
+
+	</script>
 </body>
 </html>
 
