added home icon and url link in blog

--- a/src/main/resources/static/css/site.css
+++ b/src/main/resources/static/css/site.css
@@ -37,6 +37,10 @@ a {
 	border-radius: 0px;
 }
 
+.home-logo{
+	margin-top: -8px;
+}
+
 #main-content-box {
 	/* background-color: #cecece; */
 	color: black;
