--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -2,8 +2,9 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org"
 	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
-	<title layout:title-pattern="$CONTENT_TITLE :: $LAYOUT_TITLE">Buddhi Bal Thapa</title>
-	
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<!-- <title layout:title-pattern="$CONTENT_TITLE :: $LAYOUT_TITLE">Buddhi Bal Thapa</title> -->
+	<title layout:title-pattern="$CONTENT_TITLE :: $DECORATOR_TITLE">Buddhi Bal Thapa</title>
 	<link rel="stylesheet" th:href="@{https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css}"
 		integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
 		crossorigin="anonymous" />
@@ -11,6 +12,7 @@
 	
 	<link rel="stylesheet" th:href="@{https://cdn.datatables.net/1.10.15/css/jquery.dataTables.min.css}" />
 	<link rel="stylesheet" th:href="@{/css/sweetalert.css}" />
+	<link rel="stylesheet" th:href="@{http://fonts.googleapis.com/css?family=Open+Sans}" type="text/css" />
 	<script src='https://www.google.com/recaptcha/api.js'></script>
 </head>
 <body>
@@ -142,8 +144,9 @@
 	<script th:src="@{https://use.fontawesome.com/acd9b24c0b.js}"></script>
 	<script
 		th:src="@{https://cdn.datatables.net/1.10.15/js/jquery.dataTables.min.js}"></script>
-	<script th:src="@{/js/site.js}"></script>
 	<script th:src="@{/js/sweetalert.min.js}"></script>
+	<script th:src="@{/js/site.js}"></script>
+	<script th:src="@{/js/dashboard.js}"></script>	
 	<script>
 		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
