--- a/src/main/resources/templates/dashboard/index.html
+++ b/src/main/resources/templates/dashboard/index.html
@@ -66,7 +66,7 @@
 					<div id="page-inner">
 						<div class="row">
 							<div class="col-lg-12">
-								<h2>ADMIN DASHBOARD</h2>
+								<h2>DASHBOARD</h2>
 							</div>
 						</div>
 						<!-- /. ROW  -->
