--- a/src/main/resources/templates/dashboard/index.html
+++ b/src/main/resources/templates/dashboard/index.html
@@ -74,7 +74,7 @@
 						<div class="row">
 							<div class="col-lg-12 ">
 								<div class="alert alert-info">
-									<strong>Welcome Jhon Doe ! </strong> You Have No pending Task
+									Welcome <strong>User ! </strong> You Have No pending Task
 									For Today.
 								</div>
 							</div>
@@ -171,7 +171,52 @@
 								</div>
 							</div>
 						</div>
-						
+						<!-- /. ROW  -->
+						<div class="row text-center pad-top">
+
+							<div class="col-lg-2 col-md-2 col-sm-2 col-xs-6">
+								<div class="div-square">
+									<a href="blank.html"> <i class="fa fa-user fa-5x"></i>
+										<h4>Profile</h4>
+									</a>
+								</div>
+							</div>
+							<div class="col-lg-2 col-md-2 col-sm-2 col-xs-6">
+								<div class="div-square">
+									<a href="blank.html"> <i class="fa fa-gear fa-5x"></i>
+										<h4>Settings</h4>
+									</a>
+								</div>
+							</div>
+							<div class="col-lg-2 col-md-2 col-sm-2 col-xs-6">
+								<div class="div-square">
+									<a href="blank.html"> <i class="fa fa-wechat fa-5x"></i>
+										<h4>Live Talk</h4>
+									</a>
+								</div>
+							</div>
+							<div class="col-lg-2 col-md-2 col-sm-2 col-xs-6">
+								<div class="div-square">
+									<a href="blank.html"> <i class="fa fa-bell-o fa-5x"></i>
+										<h4>Notifications</h4>
+									</a>
+								</div>
+							</div>
+							<div class="col-lg-2 col-md-2 col-sm-2 col-xs-6">
+								<div class="div-square">
+									<a href="blank.html"> <i class="fa fa-rocket fa-5x"></i>
+										<h4>Launch</h4>
+									</a>
+								</div>
+							</div>
+							<div class="col-lg-2 col-md-2 col-sm-2 col-xs-6">
+								<div class="div-square">
+									<a href="blank.html"> <i class="fa fa-user fa-5x"></i>
+										<h4>Register User</h4>
+									</a>
+								</div>
+							</div>
+						</div>
 					</div>
 					<!-- /. PAGE INNER  -->
 				</div>
