--- a/src/main/resources/templates/dashboard/profile.html
+++ b/src/main/resources/templates/dashboard/profile.html
@@ -37,7 +37,7 @@
 				<nav class="navbar-default navbar-side" role="navigation">
 					<div class="sidebar-collapse">
 						<ul class="nav" id="main-menu">
-							<li><a th:href="@{/dashboard}"><i
+							<li class="active-link"><a href="index.html"><i
 									class="fa fa-desktop "></i>Dashboard <span class="badge">Included</span></a>
 							</li>
 							<li><a href="ui.html"><i class="fa fa-table "></i>UI
@@ -66,7 +66,7 @@
 					<div id="page-inner">
 						<div class="row">
 							<div class="col-lg-12">
-								<h2>DASHBOARD</h2><span th:text="${session.foo}"></span>
+								<h2>DASHBOARD</h2>
 							</div>
 						</div>
 						<!-- /. ROW  -->
@@ -135,10 +135,9 @@
 									</a>
 								</div>
 							</div>
-							<div class="col-lg-2 col-md-2 col-sm-2 col-xs-6" sec:authorize="isAuthenticated()">
+							<div class="col-lg-2 col-md-2 col-sm-2 col-xs-6">
 								<div class="div-square">
-								
-									<a th:href="@{/settings/user/{id}/profile(id=${userId})}"> <i class="fa fa-gear fa-5x"></i>
+									<a href="blank.html"> <i class="fa fa-gear fa-5x"></i>
 										<h4>Settings</h4>
 									</a>
 								</div>
