--- a/src/main/resources/templates/dashboard/profile.html
+++ b/src/main/resources/templates/dashboard/profile.html
@@ -36,192 +36,34 @@
 	
 				<nav class="navbar-default navbar-side" role="navigation">
 					<div class="sidebar-collapse">
-						<ul class="nav" id="main-menu">
-							<li class="active-link"><a href="index.html"><i
-									class="fa fa-desktop "></i>Dashboard <span class="badge">Included</span></a>
-							</li>
-							<li><a href="ui.html"><i class="fa fa-table "></i>UI
-									Elements <span class="badge">Included</span></a></li>
-							<li><a href="blank.html"><i class="fa fa-edit "></i>Blank
-									Page <span class="badge">Included</span></a></li>
-							<li><a href="#"><i class="fa fa-qrcode "></i>My Link One</a>
-							</li>
-							<li><a href="#"><i class="fa fa-bar-chart-o"></i>My Link
-									Two</a></li>
-
-							<li><a href="#"><i class="fa fa-edit "></i>My Link Three
-							</a></li>
-							<li><a href="#"><i class="fa fa-table "></i>My Link Four</a>
-							</li>
-							<li><a href="#"><i class="fa fa-edit "></i>My Link Five
-							</a></li>
-
-						</ul>
+						<div th:replace="dashboard/leftNavbar :: navbar">Left nav bar</div>
 					</div>
-
 				</nav>
+				
 				<!-- /. NAV SIDE  -->
 	
 				<div id="page-wrapper">
 					<div id="page-inner">
-						<div class="row">
-							<div class="col-lg-12">
-								<h2>DASHBOARD</h2>
-							</div>
-						</div>
-						<!-- /. ROW  -->
-						<hr />
-						<div class="row">
-							<div class="col-lg-12 ">
-								<div class="alert alert-info">
-									Welcome <strong>User ! </strong> You Have No pending Task
-									For Today.
-								</div>
-							</div>
-						</div>
-						<!-- /. ROW  -->
-						<div class="row text-center pad-top">
-							<div class="col-lg-2 col-md-2 col-sm-2 col-xs-6">
-								<div class="div-square">
-									<a href="blank.html"> <i class="fa fa-circle-o-notch fa-5x"></i>
-										<h4>Check Data</h4>
-									</a>
-								</div>
-							</div>
-
-							<div class="col-lg-2 col-md-2 col-sm-2 col-xs-6">
-								<div class="div-square">
-									<a href="blank.html"> <i class="fa fa-envelope-o fa-5x"></i>
-										<h4>Mail Box</h4>
-									</a>
-								</div>
-							</div>
-							<div class="col-lg-2 col-md-2 col-sm-2 col-xs-6">
-								<div class="div-square">
-									<a href="blank.html"> <i class="fa fa-lightbulb-o fa-5x"></i>
-										<h4>New Issues</h4>
-									</a>
-								</div>
-							</div>
-							<div class="col-lg-2 col-md-2 col-sm-2 col-xs-6">
-								<div class="div-square">
-									<a href="blank.html"> <i class="fa fa-users fa-5x"></i>
-										<h4>See Users</h4>
-									</a>
-								</div>
-							</div>
-							<div class="col-lg-2 col-md-2 col-sm-2 col-xs-6">
-								<div class="div-square">
-									<a href="blank.html"> <i class="fa fa-key fa-5x"></i>
-										<h4>Admin</h4>
-									</a>
-								</div>
-							</div>
-							<div class="col-lg-2 col-md-2 col-sm-2 col-xs-6">
-								<div class="div-square">
-									<a href="blank.html"> <i class="fa fa-comments-o fa-5x"></i>
-										<h4>Support</h4>
-									</a>
-								</div>
-							</div>
-						</div>
-						<!-- /. ROW  -->
-						<div class="row text-center pad-top">
-
-							<div class="col-lg-2 col-md-2 col-sm-2 col-xs-6">
-								<div class="div-square">
-									<a href="blank.html"> <i class="fa fa-clipboard fa-5x"></i>
-										<h4>All Docs</h4>
-									</a>
-								</div>
-							</div>
-							<div class="col-lg-2 col-md-2 col-sm-2 col-xs-6">
-								<div class="div-square">
-									<a href="blank.html"> <i class="fa fa-gear fa-5x"></i>
-										<h4>Settings</h4>
-									</a>
-								</div>
-							</div>
-							<div class="col-lg-2 col-md-2 col-sm-2 col-xs-6">
-								<div class="div-square">
-									<a href="blank.html"> <i class="fa fa-wechat fa-5x"></i>
-										<h4>Live Talk</h4>
-									</a>
-								</div>
-							</div>
-							<div class="col-lg-2 col-md-2 col-sm-2 col-xs-6">
-								<div class="div-square">
-									<a href="blank.html"> <i class="fa fa-bell-o fa-5x"></i>
-										<h4>Notifications</h4>
-									</a>
-								</div>
-							</div>
-							<div class="col-lg-2 col-md-2 col-sm-2 col-xs-6">
-								<div class="div-square">
-									<a href="blank.html"> <i class="fa fa-rocket fa-5x"></i>
-										<h4>Launch</h4>
-									</a>
-								</div>
-							</div>
-							<div class="col-lg-2 col-md-2 col-sm-2 col-xs-6">
-								<div class="div-square">
-									<a href="blank.html"> <i class="fa fa-user fa-5x"></i>
-										<h4>Register User</h4>
-									</a>
-								</div>
-							</div>
-						</div>
-						<!-- /. ROW  -->
-						<div class="row text-center pad-top">
-
-							<div class="col-lg-2 col-md-2 col-sm-2 col-xs-6">
-								<div class="div-square">
-									<a href="blank.html"> <i class="fa fa-user fa-5x"></i>
-										<h4>Profile</h4>
-									</a>
-								</div>
-							</div>
-							<div class="col-lg-2 col-md-2 col-sm-2 col-xs-6">
-								<div class="div-square">
-									<a href="blank.html"> <i class="fa fa-gear fa-5x"></i>
-										<h4>Settings</h4>
-									</a>
-								</div>
-							</div>
-							<div class="col-lg-2 col-md-2 col-sm-2 col-xs-6">
-								<div class="div-square">
-									<a href="blank.html"> <i class="fa fa-wechat fa-5x"></i>
-										<h4>Live Talk</h4>
-									</a>
-								</div>
-							</div>
-							<div class="col-lg-2 col-md-2 col-sm-2 col-xs-6">
-								<div class="div-square">
-									<a href="blank.html"> <i class="fa fa-bell-o fa-5x"></i>
-										<h4>Notifications</h4>
-									</a>
-								</div>
-							</div>
-							<div class="col-lg-2 col-md-2 col-sm-2 col-xs-6">
-								<div class="div-square">
-									<a href="blank.html"> <i class="fa fa-rocket fa-5x"></i>
-										<h4>Launch</h4>
-									</a>
-								</div>
-							</div>
-							<div class="col-lg-2 col-md-2 col-sm-2 col-xs-6">
-								<div class="div-square">
-									<a href="blank.html"> <i class="fa fa-user fa-5x"></i>
-										<h4>Register User</h4>
-									</a>
-								</div>
-							</div>
-						</div>
+							<div class="panel-group">
+							    <div class="panel panel-default">
+							    	<div class="panel-heading">
+										<h3>Profile</h3>
+									</div>
+      								<div class="panel-body">
+    									<div class="col-sm-4">
+    										left form
+    									</div>
+    									<div class="col-sm-8">
+    										right form
+    									</div>
+									</div>
+    							</div>
+    						</div>
 					</div>
-					<!-- /. PAGE INNER  -->
 				</div>
-				<!-- /. PAGE WRAPPER  -->
+					<!-- /. PAGE INNER  -->
 			</div>
+			<!-- /. PAGE WRAPPER  -->
 
 		</section>
 	</div>
