added social media plugin

--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -81,7 +81,9 @@
 		<div class="container">
 			<div class="row" id="main-content-box">
 				<section layout:fragment="content">
+					<div layout:fragment="share-this"></div>
 					<p>Page content goes here</p>
+					<div layout:fragment="share-this"></div>
 				</section>
 			</div>
 			<div layout:fragment="comment"></div>
