--- a/src/main/resources/templates/dashboard/profile.html
+++ b/src/main/resources/templates/dashboard/profile.html
@@ -51,7 +51,7 @@
 									</div>
       								<div class="panel-body">
     									<div class="col-sm-4">
-    										left form
+    										<p><a th:href="@{/settings/user/profile/change-password}">Change Password</a></p>
     									</div>
     									<div class="col-sm-8">
     										right form
