--- a/src/main/resources/templates/dashboard/index.html
+++ b/src/main/resources/templates/dashboard/index.html
@@ -19,6 +19,7 @@
 							</button>
       						<a class="navbar-brand" th:href="@{/}"><i class="fa fa-home fa-2x" aria-hidden="true"></i></a>
 				    	</div>
+						<!-- 
 				    	<div id="navbar" class="navbar-collapse collapse">
 				    	<div th:with="currentUser=${#httpServletRequest.userPrincipal?.name}">
 							<div th:if="${currentUser!=null}">
@@ -30,13 +31,23 @@
 							</div>
 						</div>
 						</div>
+						 -->
 			  		</div>
+			  		
 				</div>
-				<!-- /. NAV TOP  -->
 	
 				<nav class="navbar-default navbar-side" role="navigation">
 					<div class="sidebar-collapse">
 						<div th:replace="dashboard/leftNavbar :: navbar">Left nav bar</div>
+						<div th:with="currentUser=${#httpServletRequest.userPrincipal?.name}">
+							<div th:if="${currentUser!=null}">
+				    			<ul class="nav navbar-nav navbar-right">
+									<li><a th:href="@{/user}"><i class="fa fa-user" aria-hidden="true"></i>
+									<span th:text="${currentUser}"></span></a></li>
+									<li><a th:href="@{/logout}"><i class="fa fa-sign-out" aria-hidden="true"></i>Logout</a></li>
+						    	</ul>
+							</div>
+						</div>
 					</div>
 				</nav>
 				
