--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -2,8 +2,8 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org" 
 	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<!-- <title layout:title-pattern="$CONTENT_TITLE :: $LAYOUT_TITLE">Buddhi Bal Thapa</title> -->
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+	<meta name="description" content="Buddhi Bal Thapa" />
 	<title layout:title-pattern="$CONTENT_TITLE :: $DECORATOR_TITLE">Buddhi Bal Thapa</title>
 	<link rel="stylesheet" th:href="@{https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css}"
 		integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
@@ -14,10 +14,21 @@
 	<link rel="stylesheet" th:href="@{/css/sweetalert.css}" />
 	<link rel="stylesheet" th:href="@{http://fonts.googleapis.com/css?family=Open+Sans}" type="text/css" />
 	<script src='https://www.google.com/recaptcha/api.js'></script>
+	<script>
+		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  		m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  		})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  		ga('create', 'UA-40696634-2', 'auto');
+ 		ga('send', 'pageview');
+
+	</script>
+	
 </head>
 <body>
 	<div class="content">
-		<header>
+		<header sec:authorize="isAnonymous()">
 			<nav class="navbar navbar-inverse">
 				<div class="container-fluid">
 					<div class="navbar-header">
@@ -162,17 +173,6 @@
 	<script th:src="@{/js/sweetalert.min.js}"></script>
 	<script th:src="@{/js/site.js}"></script>
 	<script th:src="@{/js/dashboard.js}"></script>	
-	<script>
-		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  		m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  		})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-  		ga('create', 'UA-40696634-2', 'auto');
- 		ga('send', 'pageview');
-
-	</script>
-	
 </body>
 </html>
 
