--- a/src/main/resources/static/css/dashboard.css
+++ b/src/main/resources/static/css/dashboard.css
@@ -18,7 +18,6 @@ body {
 #wrapper {
 	width: 100%;
 	/* margin-top: 50px; */
-	margin-top: 110px;
 }
 
 #page-wrapper {
@@ -41,40 +40,25 @@ body {
 /*==============================================
     MENU STYLES    
     =============================================*/
-.sidebar-collapse .nav {
+..navbar-top .nav {
 	padding: 0;
 	/* padding-top: 50px; */
 }
 
-.sidebar-collapse>.nav>li>a {
+..navbar-top>.nav>li>a {
 	padding: 15px 10px;
 	color: #214761;
 	font-weight: 900;
 	font-size: 16px;
 }
 
-.sidebar-collapse>.nav>li {
+..navbar-top>.nav>li {
 	border-bottom: 1px solid #e1e1e1;
 }
 
-.sidebar-collapse .nav>li>a:hover, .sidebar-collapse .nav>li>a:focus {
+..navbar-top .nav>li>a:hover, .sidebar-collapse .nav>li>a:focus {
 	background: #F3F3F3;
 	outline: 0;
-}
-
-.navbar-side {
-	border: none;
-	background-color: #fff;
-}
-
-.navbar-inverse {
-	background-color: #214761;
-	border-color: #F0F0F0;
-	min-height: 70px;
-}
-
-.nav>li>a>i {
-	margin-right: 10px;
 }
 
 .logout-spn {
@@ -117,7 +101,7 @@ body {
 @media ( min-width :768px) {
 	#page-wrapper {
 		/* margin: 0 0 0 260px; */
-		margin: -65px 0 0 260px;
+		margin: 0px 0 0 260px;
 		padding: 0px 15px;
 		min-height: 1050px;
 	}
