--- a/src/main/resources/templates/dashboard/index.html
+++ b/src/main/resources/templates/dashboard/index.html
@@ -11,31 +11,6 @@
 	<div class="container">
 		<section layout:fragment="content">
 			<div id="wrapper">
-				<div class="navbar navbar-inverse navbar-fixed-top">
-			 		<div class="container-fluid">
-    					<div class="navbar-header">
-    						<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".sidebar-collapse">
-							<span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
-							</button>
-      						<a class="navbar-brand" th:href="@{/}"><i class="fa fa-home fa-2x" aria-hidden="true"></i></a>
-				    	</div>
-						<!-- 
-				    	<div id="navbar" class="navbar-collapse collapse">
-				    	<div th:with="currentUser=${#httpServletRequest.userPrincipal?.name}">
-							<div th:if="${currentUser!=null}">
-				    			<ul class="nav navbar-nav navbar-right">
-									<li><a th:href="@{/user}"><i class="fa fa-user" aria-hidden="true"></i>
-									<span th:text="${currentUser}"></span></a></li>
-									<li><a th:href="@{/logout}"><i class="fa fa-sign-out" aria-hidden="true"></i>Logout</a></li>
-						    	</ul>
-							</div>
-						</div>
-						</div>
-						 -->
-			  		</div>
-			  		
-				</div>
-	
 				<nav class="navbar-default navbar-side" role="navigation">
 					<div class="sidebar-collapse">
 						<div th:replace="dashboard/leftNavbar :: navbar">Left nav bar</div>
@@ -56,20 +31,18 @@
 				<div id="page-wrapper">
 					<div id="page-inner">
 						<div class="row">
-							<div class="col-lg-12">
+							<div class="col-sm-4">
 								<h2>DASHBOARD</h2><span th:text="${session.foo}"></span>
+							</div>
+							<div class="col-sm-4 col-sm-offset-4">
+								<p class="alert alert-info">
+									Welcome <strong>User ! </strong>
+								</p>
 							</div>
 						</div>
 						<!-- /. ROW  -->
 						<hr />
-						<div class="row">
-							<div class="col-lg-12 ">
-								<div class="alert alert-info">
-									Welcome <strong>User ! </strong> You Have No pending Task
-									For Today.
-								</div>
-							</div>
-						</div>
+						
 						<!-- /. ROW  -->
 						<div class="row text-center pad-top">
 							<div class="col-lg-2 col-md-2 col-sm-2 col-xs-6">
