--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org" 
 	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 	<meta name="description" content="Buddhi Bal Thapa" />
 	<title layout:title-pattern="$CONTENT_TITLE :: $DECORATOR_TITLE">Buddhi Bal Thapa</title>
 	<link rel="stylesheet" th:href="@{https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css}"
@@ -28,12 +28,29 @@
 </head>
 <body>
 	<div class="content">
+		<div sec:authorize="isAuthenticated()" class="navbar navbar-inverse">
+			 <div class="container-fluid">
+    			<div class="navbar-header">
+    				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".sidebar-collapse">
+					<span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
+					</button>
+      				<a class="navbar-brand" th:href="@{/}"><i class="fa fa-home fa-2x" aria-hidden="true"></i></a>
+			   	</div>
+						
+			  	<div class="sidebar-collapse navbar-collapse collapse">
+					<ul class="nav navbar-nav navbar-right">
+						<li><a th:href="@{/dashboard}"><i class="fa fa-tachometer" aria-hidden="true"></i>&nbsp;Dashboard</a></li>
+				   	</ul>
+				</div>
+					
+		  	</div>
+		</div>		
+
 		<header sec:authorize="isAnonymous()">
 			<nav class="navbar navbar-inverse">
 				<div class="container-fluid">
 					<div class="navbar-header">
-						<button type="button" class="navbar-toggle collapsed"
-							data-toggle="collapse" data-target="#navbar"
+						<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
 							aria-expanded="false" aria-controls="navbar">
 							<span class="sr-only">Toggle navigation</span> <span
 								class="icon-bar"></span> <span class="icon-bar"></span> <span
