--- a/src/main/resources/static/css/site.css
+++ b/src/main/resources/static/css/site.css
@@ -44,6 +44,7 @@ a {
 .navbar-side {
 	border: none;
 	background-color: #fff;
+	margin-left: 12px;
 }
 
 .navbar-inverse {
@@ -61,6 +62,7 @@ a {
 	/* background-color: #cecece; */
 	color: black;
 	padding: 5px;
+	margin-top: -20px;
 }
 
 /* login box starts */
