--- a/src/main/resources/templates/blog/showBlog.html
+++ b/src/main/resources/templates/blog/showBlog.html
@@ -6,7 +6,6 @@
 	<body>
 		<div layout:fragment="content">
 			<div class="container">
-			
 				<div class="col-sm-9">
 					<span><a th:href="@{/blog/all}"><i
 							class="fa fa-long-arrow-left" aria-hidden="true"></i> Go Back</a></span>
@@ -99,14 +98,14 @@
 					</div>
 				</div>
 				<!-- most popular blogs ends -->
+				<!-- comment box starts -->
+				<div id="disqus-comment" layout:fragment="comment">
+					<div id="disqus_thread"></div>
+					<div th:replace="blog/disqusComment :: disqus-counter"></div>
+					<div th:replace="blog/disqusComment :: disqus-loader"></div>
+				</div>
+			<!-- comment box ends -->
 			</div>
 		</div>
-		<!-- comment box starts -->
-		<div class="containter" id="disqus-comment" layout:fragment="comment">
-			<div id="disqus_thread"></div>
-			<div th:replace="blog/disqusComment :: disqus-counter"></div>
-			<div th:replace="blog/disqusComment :: disqus-loader"></div>
-		</div>
-		<!-- comment box ends -->
 	</body>
 </html>
