added input fields for addResume page

--- a/src/main/resources/templates/dashboard/leftNavbar.html
+++ b/src/main/resources/templates/dashboard/leftNavbar.html
@@ -4,7 +4,7 @@
 		<li><a href="blank.html"><i class="fa fa-edit "></i>Admin
 				<span class="badge">Included</span></a></li>
 		<li><a href="#"><i class="fa fa-qrcode "></i>Settings</a></li>
-		<li><a href="#"><i class="fa fa-bar-chart-o"></i>My Link Two</a></li>
+		<li><a th:href="@{/resume/new}"><i class="fa fa-bar-chart-o"></i>Resume</a></li>
 	
 		<li><a href="#"><i class="fa fa-edit "></i>My Link Three </a></li>
 		<li><a href="#"><i class="fa fa-table "></i>My Link Four</a></li>
