--- a/src/main/resources/templates/resume/addResume.html
+++ b/src/main/resources/templates/resume/addResume.html
@@ -10,84 +10,84 @@
 <body>
 	<div layout:fragment="content">
 		<div class="container">
-			<div class="panel panel-success">
+			<div class="panel panel-default">
 				<div class="panel-heading">My Resume</div>
 				<div class="panel-body">
-					<form class="form-horizontal" action="" enctype="multipart/form-data">
+					<form th:action="@{/resume/new}" th:method="post" th:object="${resume}" class="form-horizontal" enctype="multipart/form-data">
 						<div class="form-group">
 							<label class="control-label col-sm-2" for="name">Name:</label>
 							<div class="col-sm-10">
-								<input type="text" class="form-control" placeholder="my name" />
+								<input type="text" class="form-control" th:field="*{name}" placeholder="my name" />
 							</div>
 						</div>
 						<div class="form-group">
 							<label class="control-label col-sm-2" for="age">Age:</label>
 							<div class="col-sm-10">
-								<input type="number" class="form-control" placeholder="my age" />
+								<input type="number" class="form-control" th:field="*{age}" placeholder="my age" />
 							</div>
 						</div>
 						<div class="form-group">
 							<label class="control-label col-sm-2" for="location">Current Location:</label>
 							<div class="col-sm-10">
-								<input type="text" class="form-control" placeholder="my location" />
+								<input type="text" class="form-control" th:field="*{location}" placeholder="my location" />
 							</div>
 						</div>
 						<div class="form-group">
 							<label class="control-label col-sm-2" for="location">Picture:</label>
 							<div class="col-sm-10">
-								<input type="file" placeholder="select picture" />
+								<input type="file" th:field="*{image}" placeholder="select picture" />
 							</div>
 						</div>
 						<div class="form-group">
 							<label class="control-label col-sm-2" for="pwd">About Me:</label>
 							<div class="col-sm-10">
-								<textarea cols="30" rows="10" class="form-control" placeholder="about me" ></textarea>
+								<textarea cols="30" rows="10" class="form-control" th:field="*{about}" placeholder="about me" ></textarea>
 							</div>
 						</div>
 						<div class="form-group">
 							<label class="control-label col-sm-2" for="location">Education:</label>
 							<label class="control-label col-sm-3" for="college">College/University Name:</label>
 							<div class="col-sm-6">
-								<input type="text" class="form-control" placeholder="college /university" />
+								<input type="text" class="form-control" th:field="*{education.name[0]}" placeholder="college /university" />
 							</div>
 						</div>
 						<div class="form-group">
 							<label class="control-label col-sm-3 col-sm-offset-2" for="college">Course:</label>
 							<div class="col-sm-6">
-								<input type="text" class="form-control" placeholder="course of study" />
+								<input type="text" class="form-control" th:field="*{education.course[0]}" placeholder="course of study" />
 							</div>
 						</div>
 						<div class="form-group">
 							<label class="control-label col-sm-3 col-sm-offset-2" for="college">Start date:</label>
 							<div class="col-sm-2">
-								<input type="text" class="form-control" placeholder="start date" />
+								<input type="text" class="form-control" th:field="*{education.startDate[0]}" placeholder="start date" />
 							</div>
 							<label class="control-label col-sm-2" for="college">End date:</label>
 							<div class="col-sm-2">
-								<input type="text" class="form-control" placeholder="end date" />
+								<input type="text" class="form-control" th:field="*{education.endDate[0]}" placeholder="end date" />
 							</div>
 						</div>
 						<div class="form-group">
 							<label class="control-label col-sm-2" for="location"></label>
 							<label class="control-label col-sm-3" for="college">College/University Name:</label>
 							<div class="col-sm-6">
-								<input type="text" class="form-control" placeholder="college /university" />
+								<input type="text" class="form-control" th:field="*{education.name[1]}" placeholder="college /university" />
 							</div>
 						</div>
 						<div class="form-group">
 							<label class="control-label col-sm-3 col-sm-offset-2" for="college">Course:</label>
 							<div class="col-sm-6">
-								<input type="text" class="form-control" placeholder="course of study" />
+								<input type="text" class="form-control" th:field="*{education.course[1]}" placeholder="course of study" />
 							</div>
 						</div>
 						<div class="form-group">
 							<label class="control-label col-sm-3 col-sm-offset-2" for="college">Start date:</label>
 							<div class="col-sm-2">
-								<input type="text" class="form-control" placeholder="start date" />
+								<input type="text" class="form-control" th:field="*{education.startDate[1]}" placeholder="start date" />
 							</div>
 							<label class="control-label col-sm-2" for="college">End date:</label>
 							<div class="col-sm-2">
-								<input type="text" class="form-control" placeholder="end date" />
+								<input type="text" class="form-control" th:field="*{education.endDate[1]}" placeholder="end date" />
 							</div>
 						</div>
 						<hr/>
@@ -95,105 +95,105 @@
 							<label class="control-label col-sm-2" for="location">Careers:</label>
 							<label class="control-label col-sm-3" for="companyname">Company Name:</label>
 							<div class="col-sm-6">
-								<input type="text" class="form-control" placeholder="company name" />
+								<input type="text" class="form-control" th:field="*{career.name[0]}" placeholder="company name" />
 							</div>
 						</div>
 						<div class="form-group">
 							<label class="control-label col-sm-3 col-sm-offset-2" for="title">Title:</label>
 							<div class="col-sm-6">
-								<input type="text" class="form-control" placeholder="title" />
+								<input type="text" class="form-control" th:field="*{career.title[0]}" placeholder="title" />
 							</div>
 						</div>
 						<div class="form-group">
 							<label class="control-label col-sm-3 col-sm-offset-2" for="startdate">Start date:</label>
 							<div class="col-sm-2">
-								<input type="text" class="form-control" placeholder="start date" />
+								<input type="text" class="form-control" th:field="*{career.startDate[0]}" placeholder="start date" />
 							</div>
 							<label class="control-label col-sm-2" for="enddate">End date:</label>
 							<div class="col-sm-2">
-								<input type="text" class="form-control" placeholder="end date" />
+								<input type="text" class="form-control" th:field="*{career.endDate[0]}" placeholder="end date" />
 							</div>
 						</div>
 						<div class="form-group">
-							<label class="control-label col-sm-3 col-sm-offset-2" for="startdate">Location:</label>
+							<label class="control-label col-sm-3 col-sm-offset-2" for="location">Location:</label>
 							<div class="col-sm-6">
-								<input type="text" class="form-control" placeholder="location" />
+								<input type="text" class="form-control" th:field="*{career.location[0]}" placeholder="location" />
 							</div>
 						</div>
 						<div class="form-group">
-							<label class="control-label col-sm-3 col-sm-offset-2" for="startdate">Website:</label>
+							<label class="control-label col-sm-3 col-sm-offset-2" for="website">Website:</label>
 							<div class="col-sm-6">
-								<input type="text" class="form-control" placeholder="company website" />
+								<input type="text" class="form-control" th:field="*{career.website[0]}" placeholder="company website" />
 							</div>
 						</div>
 						<div class="form-group">
 							<label class="control-label col-sm-2" for="location"></label>
 							<label class="control-label col-sm-3" for="companyname">Company Name:</label>
 							<div class="col-sm-6">
-								<input type="text" class="form-control" placeholder="company name" />
+								<input type="text" class="form-control" th:field="*{career.name[1]}" placeholder="company name" />
 							</div>
 						</div>
 						<div class="form-group">
 							<label class="control-label col-sm-3 col-sm-offset-2" for="title">Title:</label>
 							<div class="col-sm-6">
-								<input type="text" class="form-control" placeholder="title" />
+								<input type="text" class="form-control" th:field="*{career.title[1]}" placeholder="title" />
 							</div>
 						</div>
 						<div class="form-group">
 							<label class="control-label col-sm-3 col-sm-offset-2" for="startdate">Start date:</label>
 							<div class="col-sm-2">
-								<input type="text" class="form-control" placeholder="start date" />
+								<input type="text" class="form-control" th:field="*{career.startDate[1]}" placeholder="start date" />
 							</div>
 							<label class="control-label col-sm-2" for="enddate">End date:</label>
 							<div class="col-sm-2">
-								<input type="text" class="form-control" placeholder="end date" />
+								<input type="text" class="form-control" th:field="*{career.endDate[1]}" placeholder="end date" />
 							</div>
 						</div>
 						<div class="form-group">
-							<label class="control-label col-sm-3 col-sm-offset-2" for="startdate">Location:</label>
+							<label class="control-label col-sm-3 col-sm-offset-2" for="location">Location:</label>
 							<div class="col-sm-6">
-								<input type="text" class="form-control" placeholder="location" />
+								<input type="text" class="form-control" th:field="*{career.location[1]}" placeholder="location" />
 							</div>
 						</div>
 						<div class="form-group">
-							<label class="control-label col-sm-3 col-sm-offset-2" for="startdate">Website:</label>
+							<label class="control-label col-sm-3 col-sm-offset-2" for="website">Website:</label>
 							<div class="col-sm-6">
-								<input type="text" class="form-control" placeholder="company website" />
+								<input type="text" class="form-control" th:field="*{career.website[1]}" placeholder="company website" />
 							</div>
 						</div>
 						<div class="form-group">
 							<label class="control-label col-sm-2" for="location"></label>
-							<label class="control-label col-sm-3" for="companyname">Company Name:</label>
+							<label class="control-label col-sm-3" for="name">Company Name:</label>
 							<div class="col-sm-6">
-								<input type="text" class="form-control" placeholder="company name" />
+								<input type="text" class="form-control" th:field="*{career.name[2]}" placeholder="company name" />
 							</div>
 						</div>
 						<div class="form-group">
 							<label class="control-label col-sm-3 col-sm-offset-2" for="title">Title:</label>
 							<div class="col-sm-6">
-								<input type="text" class="form-control" placeholder="title" />
+								<input type="text" class="form-control" th:field="*{career.title[2]}" placeholder="title" />
 							</div>
 						</div>
 						<div class="form-group">
 							<label class="control-label col-sm-3 col-sm-offset-2" for="startdate">Start date:</label>
 							<div class="col-sm-2">
-								<input type="text" class="form-control" placeholder="start date" />
+								<input type="text" class="form-control" th:field="*{career.startDate[2]}" placeholder="start date" />
 							</div>
 							<label class="control-label col-sm-2" for="enddate">End date:</label>
 							<div class="col-sm-2">
-								<input type="text" class="form-control" placeholder="end date" />
+								<input type="text" class="form-control" th:field="*{career.endDate[2]}" placeholder="end date" />
 							</div>
 						</div>
 						<div class="form-group">
-							<label class="control-label col-sm-3 col-sm-offset-2" for="startdate">Location:</label>
+							<label class="control-label col-sm-3 col-sm-offset-2" for="location">Location:</label>
 							<div class="col-sm-6">
-								<input type="text" class="form-control" placeholder="location" />
+								<input type="text" class="form-control" th:field="*{career.location[2]}" placeholder="location" />
 							</div>
 						</div>
 						<div class="form-group">
-							<label class="control-label col-sm-3 col-sm-offset-2" for="startdate">Website:</label>
+							<label class="control-label col-sm-3 col-sm-offset-2" for="website">Website:</label>
 							<div class="col-sm-6">
-								<input type="text" class="form-control" placeholder="company website" />
+								<input type="text" class="form-control" th:field="*{career.website[2]}" placeholder="company website" />
 							</div>
 						</div>
 						<hr/>
