add access denied page

--- a/src/main/resources/templates/error/404.html
+++ b/src/main/resources/templates/error/404.html
@@ -13,7 +13,7 @@
 				<h1 class="red">Oops! something went wrong.</h1>
 				<h3>The resource you are looking is not available</h3>
 				<a th:href="@{/}" class="btn btn-default">Go Home</a>
-				<img src="image/frowning.png" height="400px" width="400px" class="img-responsive center-block" alt="Resource not found: Buddhi Bal Thapa"/>
+				<img src="/image/frowning.png" height="400px" width="400px" class="img-responsive center-block" alt="Resource not found: Buddhi Bal Thapa"/>
 			</div>
 		</div>
 	</div>
