--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,12 +1,54 @@
 <!DOCTYPE html>
-<html xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorator="layout">
+<html xmlns:th="http://www.thymeleaf.org"
+	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+	layout:decorator="layout">
 <head>
 <title>Home</title>
 </head>
 <body>
 	<section layout:fragment="content">
 		<div class="container">
-			<p>This is a paragraph from content page 1</p>
+			<div class="greetings center-block text-center">
+				<div id="mycarousel" class="carousel slide" data-ride="carousel">
+					<div class="carousel-inner">
+						<div class="item active">
+							
+							<h3>Oh, Hello There Beautiful Human Being!</h3>
+							
+							<div th:if="${goodMorning}">
+								<img th:src="@{/image/morning.jpg}" class="img-responsive" alt="Greetings from Buddhi Bal Thapa" />
+								<div class="carousel-caption greeting-text">Good morning have a great day</div>
+							</div>
+
+							<div th:if="${goodAfternoon}">
+								<img th:src="@{/image/afternoon.jpg}" class="img-responsive" alt="Greetings from Buddhi Bal Thapa" />
+								<div class="carousel-caption greeting-text">Good afternoon. How is your day today? Time for coffee?</div>
+							</div>
+							<div th:if="${goodEvening}">
+								<img th:src="@{/image/evening.jpg}" class="img-responsive" alt="Greetings from Buddhi Bal Thapa" />
+								<div class="carousel-caption greeting-text">Good evening time for some snacks</div>
+							</div>
+							<div th:if="${goodNight}">
+								<img th:src="@{/image/night.jpg}" class="img-responsive" alt="Greetings from Buddhi Bal Thapa" />
+								<div class="carousel-caption greeting-text">Hope you had a great day today. Good night time to sleep</div>
+							</div>
+							<div th:if="${midNight}">
+								<img th:src="@{/image/midnight.jpg}" class="img-responsive" alt="Greetings from Buddhi Bal Thapa" />
+								<div class="carousel-caption greeting-text">Wow! You still awake?</div>
+							</div>
+						</div>
+					</div>
+				</div>
+
+			</div>
+				<div class="row">
+					<div class="col-sm-6">
+						<p>Your current time is <strong><span th:text="${currentUserTime}"></span></strong></p>
+					</div>
+					<div class="col-sm-6">
+						<p class="pull-right">You are greeted with respect to your current time.</p>
+					</div>
+				</div>
 		</div>
 	</section>
 </body>
