add edit resume

--- a/src/main/resources/templates/blog/addBlog.html
+++ b/src/main/resources/templates/blog/addBlog.html
@@ -6,8 +6,8 @@
 <title>Add Blog</title>
 </head>
 <body>
-	<div class="container">
-		<section layout:fragment="content">
+	<div layout:fragment="content">
+		<div class="container">
 			<div class="row new-blog-header">
 				<div class="col-xs-6 pull-left">
 					<span th:text="#{blog.new}"></span>
@@ -57,7 +57,7 @@
 
 			<!-- blog form ends -->
 
-		</section>
+		</div>
 	</div>
 	<!-- 
 	<footer class="footer">
