--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -13,7 +13,7 @@
 	<link rel="stylesheet" th:href="@{/css/site.css}" media="screen" />
 	
 	<link rel="stylesheet" th:href="@{https://cdn.datatables.net/1.10.15/css/jquery.dataTables.min.css}" />
-	<link rel="stylesheet" th:href="@{/css/sweetalert.css}" />
+	<link rel="stylesheet" th:href="@{https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/6.6.4/sweetalert2.min.css}" />
 	<link rel="stylesheet" th:href="@{http://fonts.googleapis.com/css?family=Open+Sans}" type="text/css" />
 	<script>
 		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -185,7 +185,7 @@
 	<script th:src="@{https://use.fontawesome.com/acd9b24c0b.js}"></script>
 	<script
 		th:src="@{https://cdn.datatables.net/1.10.15/js/jquery.dataTables.min.js}"></script>
-	<script th:src="@{/js/sweetalert.min.js}"></script>
+	<script th:src="@{https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/6.6.4/sweetalert2.min.js}"></script>
 	<script src='https://www.google.com/recaptcha/api.js'></script>
 	<script th:src="@{/js/site.js}"></script>
 	<script th:src="@{/js/dashboard.js}"></script>	
