--- a/src/main/resources/templates/resume/editResume.html
+++ b/src/main/resources/templates/resume/editResume.html
@@ -25,7 +25,7 @@
 					<div th:if="${resumeUpdated}" class="alert alert-success">
 						<p>Resume Updated Successfully</p>
 					</div>
-					<form th:action="@{/resume/edit}" th:method="post" th:object="${resume}" class="form-horizontal" enctype="multipart/form-data">
+					<form id="resume-form" th:action="@{/resume/edit}" th:method="post" th:object="${resume}" class="form-horizontal" enctype="multipart/form-data">
 						
 						<div class="form-group">
 							<label class="control-label col-sm-2" for="pwd">About Me:</label>
@@ -37,7 +37,7 @@
 						
 						<div class="form-group">
     						<div class="col-sm-offset-2 col-sm-10">
-      							<button type="submit" class="btn btn-success">Update Resume</button>
+      							<button type="button" class="save-confirm btn btn-success">Update Resume</button>
 						    </div>
   						</div>
 					</form>
