play youtube video after getting link from youtube-dl

--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -115,6 +115,7 @@
 				</section>
 			</div>
 			<div layout:fragment="comment"></div>
+			<div layout:fragment="player"></div>
 	</div>
 	
 	<footer class="footer">
