added loading gif while looking for audio

--- a/src/main/resources/templates/player/index.html
+++ b/src/main/resources/templates/player/index.html
@@ -37,6 +37,9 @@
 				</div>
 			</form>
 			<br />
+			<div id="loading" style="display:none;">
+				<img src="/image/loading.gif" alt="buddhi bal thapa loading" class="img-responsive"/>
+			</div>
 			<div class="audioDiv">
 				<audio controls="controls" id="audioplayer">
 					<source src="" type="audio/mp3" class="audioSource"/>
