--- a/src/main/resources/templates/blog/index.html
+++ b/src/main/resources/templates/blog/index.html
@@ -94,7 +94,7 @@
 			<div class="col-sm-4">
 				<div class="panel panel-default">
 					<div class="panel-heading most-popular-blog">
-						<p th:text="#{blog.recent}"></p>
+						<p th:text="#{category.show}"></p>
 					</div>
 					<div class="panel-body">
 						<div th:each="category : ${categories}">
